# openchat

./: .gitignore  .gitmodules  .taurignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.husky/: pre-commit  pre-push
scripts/: check-version.js  glob.js  tauri-wrapper.sh  update.cjs  update.template.json
src/: App.tsx  PromptsPage.scss  PromptsPage.tsx  TabChat.tsx  TabPrompt.tsx  TabPrompts.tsx  TabSettings.tsx  bindings-v2.ts  main.tsx  rust-bindings.ts  tab-chat.tsx  tab-prompt.tsx  version.json
src-tauri/: Cargo.toml  Makefile  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/prisma/: schema.prisma
src-tauri/prisma/dev/: openchat-dev.db  openchat-dev.db-journal
src-tauri/prisma/migrations/20240830072741_init/: migration.sql
src-tauri/prisma/migrations/20240831032126_/: migration.sql
src-tauri/prisma/migrations/20240831034954_align_dev_db/: migration.sql
src-tauri/prisma/migrations/20240831040103_delete_time/: migration.sql
src-tauri/prisma/migrations/20240831160915_init/: migration.sql
src-tauri/prisma/migrations/20240910144555_init/: migration.sql
src-tauri/prisma/migrations/20240913055800_/: migration.sql
src-tauri/prisma/migrations/20240913145011_init/: migration.sql
src-tauri/src/: commands.rs  db.rs  dictionary.rs  main.rs  nativesql.rs
src-tauri/src/db/: command_session.rs  db_config.rs  db_prompt.rs  db_session.rs  nativesql.rs  prisma_client.rs
src/api/: app.ts  openai.ts  prompt.ts  session.ts  settings.ts
src/components/: navigation.tsx
src/hooks/: prompts-data.tsx  typewriter.ts  use-app-config.tsx  use-app-settings-navigator.tsx  use-app-settings.tsx  use-conversation-bak.tsx  use-conversation-pending.tsx  use-conversation.tsx  use-navigator.tsx  use-prompts.tsx  (+5 more)
(+126 files in other folders)
