[package]
name = "openchat"
version = "0.1.28"
description = "openchat"
authors = ["terasum"]
license = "Reserved"
repository = "https://github.com/terasum/openchat"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = ["api-all", "devtools", "macos-private-api", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
current_locale = "0.1.1"
webbrowser = "1.0.1"
log = "^0.4"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
# tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
tauri-plugin-system-info = { git = "https://github.com/HuakunShen/tauri-plugin-system-info", branch = "v1" } # use v2 branch for Tauri v2 plugin
# rusqlite = { version = "0.29.0", features = ["bundled"] }

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features= ["sqlite"], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features= ["sqlite"], default-features = false }
tokio = "1.40.0"
futures = "0.3.30"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }



[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
